# mitou_collective

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  parallel_dev_guide.md  prototype_design.md
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  manage.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  errors.py  main.py
backend/app/agent/: __init__.py  candidate_generator.py  candidate_search.py  config.py  context_collector.py  linking_agent.py  llm_client.py  prompts.py  proposal_formatter.py  trigger.py
backend/app/api/: __init__.py  agent.py  auth.py  claims.py  concepts.py  contexts.py  dependencies.py  errors.py  events.py  evidence.py  proposals.py  router.py  search.py  terms.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  policy_engine.py
backend/app/events/: __init__.py  commands.py  formatting.py  models.py  projections.py  store.py
backend/app/interfaces/: __init__.py  actor_service.py  cir_service.py  claim_service.py  concept_service.py  connection_service.py  context_service.py  event_store.py  evidence_service.py  linking_agent.py  proposal_service.py  referent_service.py  review_service.py  search_service.py  term_service.py
backend/app/models/: __init__.py  actor.py  base.py  cir.py  claim.py  concept.py  connection.py  context.py  evidence.py  proposal.py  referent.py  (+2 more)
backend/tests/: conftest.py  test_models_smoke.py
cli/: pyproject.toml
cli/cs/: api_client.py  config.py  formatters.py  main.py
cli/tests/: test_agent_commands.py  test_claim_commands.py  test_proposal_commands.py  test_resource_commands.py
(+183 files in other folders)
